== 0.9.3 2008-04-10
Skynet::Manager and Skynet Script Runner
 - Rewrote how Skynet workers and skynet manager talks on each machine.  See below for more info 
 
 - Support starting Skynet with ./script/skynet start and stop to daemonize
 - Close file handles on exec.
     Skynet::Worker and Skynet::Manager now call Skynet.fork_and_exec instead of their own versions.
     Skynet.fork_and_exec prevents file descriptor exhaustion by calling Skynet.close_file_handles.
     Skynet::Manager detatches from console by calling Skynet.close_console

 - You now have to specify your PIDFILE and LOGFILE dirs and files differently. This will break all old skynet runners. Sorry.
 - Skynet runner handles default config variables better
 - Fix serious bug in Skynet::Partitioners::RecombineAndSplit where it wouldn't handle empty results well.
 - Fixed Skynet::Partitioners::ArrayDataSplitByFirstEntry to handle strings as keys better
 - Added Skynet::Job.results_by_job_id to retrieve results from asyncronous jobs
 - Added printlog logging method which always prints to the log as [LOG]
 - Deprecated Skynet.new to Skynet.start 
 - Mysql Message Queue Adapter - Make delete_expired_messages much safer.
 - ActiveRecord::Base.distributed_find - Patch submitted by Lourens Naude (lourens@methodmissing.com) which checks the model for the primary_key name as opposed to assuming it is
  'id'
 - We don't want to use rails constantize so I've temporarily borrowed the method from ActiveSupport inflector and added it to skynet_ruby_extensions.
 - Fix bug in Job comment where it referenced MapreduceTest instead of Skynet::MapreduceTest 
 - Fix tests. For some reason you still can't run ALL the test at once with rake test, but if the files are run individually they all pass.
 - Change mysql text fields to longtext in migration and schema files
 - Include some extras including our init.d script, our nagios monitoring script, rails controller and view for monitoring